--- a/docs/接口配置.md
+++ b/docs/接口配置.md
@@ -13,8 +13,7 @@
 {
     id {string} 接口标识，唯一
     desc {string} 可选，接口说明
-    url {string} 接口地址；同域的是绝对地址，跨域的是 类型 + url,详情参见下面说明
-    method {string} 调用方式 GET POST DELETE PUT
+    url {string} 接口地址；同域的是绝对地址，跨域的是 类型 + url,详情参见下面说明,可以通过${}的方式来取param中的值
     param {object} 默认调用参数
 }
 ```
@@ -30,7 +29,7 @@ local下面接口的url都是本域的绝对地址;
     "/log/":[
        {单个接口数据结构}
     ],
-    "http://0.0.0.0/":[
+    "http://0.0.0.0/${id}":[
       {单个接口数据结构}
     ]
 }
@@ -50,3 +49,6 @@ local下面接口的url都是本域的绝对地址;
   ]
 }
 ```
+
+### 使用说明
+$rest(id).get/post/put/delete
